--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "compression": "^1.7.4",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "mysql": "^2.17.1"
+    "express-session": "^1.17.0",
+    "mysql": "^2.17.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
